// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns game results 1`] = `
"NAME                           FIRST PLAYED                   LAST PLAYED                    COMPLETED                     
Metal Gear                     a few seconds ago              a few seconds ago              ✗                             
Metal Gear 2                   a few seconds ago              a few seconds ago              ✓                             "
`;

exports[`returns only completed game results 1`] = `
"NAME                           FIRST PLAYED                   LAST PLAYED                    COMPLETED                     
Metal Gear 2                   a few seconds ago              a few seconds ago              ✓                             "
`;
